# linguobars

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  db.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  schema.py
backend/api/graphql/: connections.py  mutation.py  payloads.py  queries.py  types.py
backend/api/migrations/: 0001_initial.py  0002_alter_course_image_alter_module_content_and_more.py
backend/tatarmilete/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: controllers.py  models.py  utils.py  views.py
frontend/: package-lock.json  package.json
frontend/vite-number-conversion/: docker-compose.yml  index.html  package-lock.json  package.json
frontend/vite-number-conversion/src/: App.tsx  index.css
frontend/vite-number-conversion/src/components/Module/: Module.css  Module.tsx
frontend/vite-number-conversion/src/components/header/: Header.css  Header.tsx
frontend/vite-number-conversion/src/components/landing-header/: LandingHeader.css  LandingHeader.tsx
frontend/vite-number-conversion/src/components/task/: Task.css  Task.tsx
frontend/vite-number-conversion/src/pages/AboutProject/: AboutProjectPage.css  AboutProjectPage.tsx
frontend/vite-number-conversion/src/pages/Landing/: Landing.css  Landing.tsx
frontend/vite-number-conversion/src/pages/MaterialPage/: MaterialPage.css  MaterialPage.tsx
frontend/vite-number-conversion/src/pages/TaskPage/: TaskPage.tsx
frontend/vite-number-conversion/src/pages/singleModule/: SingleModule.css  (+1 more)
