[tool.poetry]
name = "tatar-by-hackathon"
version = "0.1.0"
description = ""
authors = ["Stepan <stepantishhen@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
graphene-django = "^3.2.1"
django-filter = "^24.2"
pillow = "^10.3.0"
django-graphql-jwt = "^0.4.0"
django-ckeditor = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
